syntax = "proto3";
package client;

option go_package = "../binary";

import "messages.proto";

message NotifyDittoActivityPayload {
    // This is not actually a boolean: after logging out, field 2 has value 2, and field 3 has value 1.
    bool success = 2;
}

message MessageReadPayload {
    string conversationID = 2;
    string messageID = 3;
}

message AckMessagePayload {
    messages.AuthMessage authData = 1;
    messages.EmptyArr emptyArr = 2;
    repeated AckMessageData acks = 4;
}

message AckMessageData {
    string requestID = 1;
    messages.Device device = 2;
}

message ImageMetaData {
    string imageID = 1;
    bool encrypted = 2;
}

message UploadImagePayload {
    ImageMetaData metaData = 1;
    messages.AuthMessage authData = 2;
}

message BugleBackendService {
    BugleCode data = 6;
}

message BugleCode {
    int64 type = 2;
}

enum BugleMessageType {
    UNKNOWN_BUGLE_MESSAGE_TYPE = 0;
    SMS = 1;
    MMS = 2;
    RCS = 3;
    CLOUD_SYNC = 4;
    IMDN_DELIVERED = 5;
    IMDN_DISPLAYED = 6;
    IMDN_FALLBACK = 7;
    RCS_GENERIC = 8;
    FTD = 9;
    FT_E2EE_LEGACY = 10;
    FT_E2EE_XML = 11;
    LIGHTER_MESSAGE = 12;
    RBM_SPAM_REPORT = 13;
    SATELLITE = 14;
}

enum BrowserTypes {
    UNKNOWN_BROWSER_TYPE = 0;
    OTHER = 1;
    CHROME = 2;
    FIREFOX = 3;
    SAFARI = 4;
    OPERA = 5;
    IE = 6;
    EDGE = 7;
}
